# docs/openapi/usuarios.yaml
@@ -37,17 +37,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UsuarioRequest'
+              $ref: '#/components/schemas/UserRequest'
       responses:
         '201':
           description: Creado
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UsuarioResponse'
-  /api/v1/usuarios/empleado:
+                $ref: '#/components/schemas/UserResponse'
+  /api/v1/users/employee:
     post:
-      tags: [Usuarios]
+      tags: [Users]
       summary: Crear usuario empleado (solo OWNER)
       security:
         - bearerAuth: []
@@ -56,14 +56,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UsuarioEmpleadoRequest'
+              $ref: '#/components/schemas/UserEmployeeRequest'
       responses:
         '201':
           description: Creado
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UsuarioResponse'
+                $ref: '#/components/schemas/UserResponse'
   /api/v1/usuarios/cliente:
     post:
       tags: [Usuarios]
@@ -129,6 +129,33 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    UserRequest:
+      type: object
+      required: [firstName, lastName, document, phone, birthDate, email, password]
+      properties:
+        firstName: { type: string }
+        lastName: { type: string }
+        document: { type: string }
+        phone: { type: string, maxLength: 13 }
+        birthDate: { type: string, format: date }
+        email: { type: string, format: email }
+        password: { type: string, format: password }
+    UserEmployeeRequest:
+      allOf:
+        - $ref: '#/components/schemas/UserRequest'
+      properties:
+        restaurantId:
+          type: integer
+          format: int64
+    UserResponse:
+      type: object
+      properties:
+        id: { type: integer, format: int64 }
+        firstName: { type: string }
+        lastName: { type: string }
+        email: { type: string }
+        role: { type: string, enum: [ADMIN, OWNER, EMPLOYEE, CUSTOMER] }
+        active: { type: boolean }
     LoginRequest:
       type: object
       required: [email, password]
